# text-extract-api

./: .gitignore  docker-compose.no_gpuyml  pyproject.toml  requirements.txt  requirements_.txt
app/: requirements.txt
client/: cli copy.py
examples/: invoice.txt
text_extract_api/extract/strategies/: llama_vision.py
